--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,85 +1,39 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-.header{
-  margin: 0;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+.header {
+
+  width: 100%;
+  height: 50%;
+
+  margin: auto;
+
 }
 
-body {
-  /* background: hsl(287, 80%, 14%); */
-  font-family: "Montserrat", sans-serif;
+.a {
+  color: rgb(253, 255, 254);
+  margin: 1.5rem;
 }
 
-.a{
-    margin: 15px;
-    color: #fcffffc6;
+.navHead {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wel{
+  margin: 1.5rem;
+  padding: 0;
+  color: aliceblue;
 }
 
 .navMenu {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  /* width: 50%;
+  height: 50%;
+  background-color: rgb(121, 16, 201);;
+  margin: auto; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25%;
 }
 
-.navMenu Link {
-  color: #ebe194;
-  text-decoration: none;
-  font-size: 1.2em;
-  text-transform: uppercase;
-  font-weight: 500;
-  display: inline-block;
-  width: 80px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.navMenu .a:hover {
-  color: #fddb3a;
-}
-
-.navMenu .dot {
-  width: 6px;
-  height: 6px;
-  background: #fddb3a;
-  border-radius: 50%;
-  opacity: 0;
-  -webkit-transform: translateX(30px);
-  transform: translateX(30px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.navMenu Link:nth-child(1):hover ~ .dot {
-  -webkit-transform: translateX(30px);
-  transform: translateX(30px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu Link:nth-child(2):hover ~ .dot {
-  -webkit-transform: translateX(110px);
-  transform: translateX(110px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu Link:nth-child(3):hover ~ .dot {
-  -webkit-transform: translateX(200px);
-  transform: translateX(200px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu Link:nth-child(4):hover ~ .dot {
-  -webkit-transform: translateX(285px);
-  transform: translateX(285px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
+h1{
+  display: inline;
 }
