--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,6 +1,26 @@
-.boys-head{
-    background-color: antiquewhite;
-    width: 50%;
-    margin-left: 25%;  
+body {
+  margin: 0px;
+  padding: 0px;
 }
 
+.back {
+  background: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.boy {
+  margin-left: 30%;
+  background-color: aliceblue;
+  margin-right: 40%;
+  text-align: center;
+}
+
+.h6 {
+  color: rgb(252, 3, 3);
+}
+
+.value {
+  color: yellow;
+}
