--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,7 +4,7 @@ body {
 }
 
 .back {
-  background: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600");
+  background: url("https://images.pexels.com/photos/82256/pexels-photo-82256.jpeg?auto=compress&cs=tinysrgb&w=600");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -18,9 +18,12 @@ body {
 }
 
 .h6 {
-  color: rgb(252, 3, 3);
+color: white;
 }
 
 .value {
-  color: yellow;
+  color:yellow;
+}
+.one{
+  background-color:black;
 }
