--- a/src/style/Girls.css
+++ b/src/style/Girls.css
@@ -1,5 +1,5 @@
 .back{
-    background: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600");
+    /* background: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600"); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
