counting feature  + image laoding feature added

--- a/src/style/Owner.css
+++ b/src/style/Owner.css
@@ -10,6 +10,7 @@
 
 }
 
+
 .owner-nav{
     background-color: rgb(28, 136, 231);
     
@@ -27,4 +28,5 @@
 
 .admin{
     background-color: rgb(236, 48, 208);
+    color: aliceblue;
 }
