--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,10 +1,11 @@
 body {
   margin: 0px;
   padding: 0px;
+  background-color: #385170;
 }
 
 .back {
-  background: url("https://images.pexels.com/photos/82256/pexels-photo-82256.jpeg?auto=compress&cs=tinysrgb&w=600");
+ background-color: #385170;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -12,13 +13,13 @@ body {
 
 .boy {
   margin-left: 30%;
-  background-color: aliceblue;
+ background-color: #385170;
   margin-right: 40%;
   text-align: center;
 }
 
 .h6 {
-color: white;
+color: aliceblue;
 }
 
 .value {
