--- a/src/style/login.css
+++ b/src/style/login.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background: gainsboro;
+ 
     /* background: url("https://img.freepik.com/premium-photo/green-armchair-white-living-room-interior-with-copy-space-mockup_43614-814.jpg?w=360"); */
     background-size: cover;
     background-repeat: no-repeat;
@@ -37,7 +37,7 @@ body {
     background-repeat: no-repeat;
     background-position: center; 
     border-radius: 15px;
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+    /* box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff; */
 }
 
 .logo {
