--- a/src/style/boys.css
+++ b/src/style/boys.css
@@ -8,12 +8,12 @@
 }
 
 .value {
-  color: yellow;
+  color: rgb(227, 227, 10);
 }
 
 .hostel-name {
   background-color: #e7eaf6;
-  color: #385170;
+  color: #315075;
 }
 
 .nav-main-cont {
