--- a/src/style/boys.css
+++ b/src/style/boys.css
@@ -28,3 +28,9 @@
   background-color: #879ced;
   color:black;
 }
+
+.left-days{
+  background-color: #9bb8f2;
+  border-radius: 7px;
+  padding: 5px;
+}
