--- a/src/style/boys.css
+++ b/src/style/boys.css
@@ -65,3 +65,17 @@
      transform: rotate(1turn);
   }
 }
+
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .chack {
+    height: 220px ;
+  }
+}
+@media only screen and (min-width: 769px) {
+  /* For mobile phones: */
+  .chack {
+    height: 150px ;
+  }
+}
