--- a/src/style/boys.css
+++ b/src/style/boys.css
@@ -39,7 +39,7 @@
   width: 56px;
   height: 56px;
   display: grid;
-  color: #1ca648;
+  color: #09f030;
   background: radial-gradient(farthest-side, currentColor calc(100% - 6.7px),#0000 calc(100% - 5.6px) 0);
   -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 14.6px),#000 calc(100% - 13.4px));
   border-radius: 50%;
